crates/bsql/tests/compile_fail_features/missing_uuid.stderr
error: PostgreSQL error: relation "tickets" does not exist (at position 29)
                SQL: SELECT id, ticket_uuid FROM tickets WHERE id = $1
                                                 ^
         available tables: bench_orders, bench_users
 --> tests/compile_fail_features/missing_uuid.rs:5:13
  |
5 |     let _ = bsql::query!("SELECT id, ticket_uuid FROM tickets WHERE id = $id: i32");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
